@@ -1,5 +1,11 @@
 2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/troff/input.cpp (token::next): Reject `\s` escape
+	sequence after `\c` on an input line.  Throw warning in category
+	"syntax" and don't interpret it at all.
+
+2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/troff/env.cpp (environment::set_font): Move warning
 	thrown (and recast it, and change its category from "font" to
 	"syntax") when font selection attempted on the ignored part of
